INCLUDES = \
	@GLIBMM_CFLAGS@ \
	-I..

noinst_LIBRARIES = \
	libdied.a

libdied_a_SOURCES = \
	BasicMessage.cxx \
	Client.cxx \
	ClientFactory.cxx \
	Common.cxx \
	EventAction.cxx \
	MessageFactory.cxx \
	Messages.cxx \
	Server.cxx \
	System.cxx \
	User.cxx

EXTRA_DIST = \
	BasicMessage.h \
	Client.h \
	ClientFactory.h \
	Common.h \
	ExternalEnvironment.h \
	InternalEnvironment.h \
	MessageFactory.h \
	Messages.h \
	Server.h \
	System.h \
	User.h
