INCLUDES = \
	@GLIBMM_CFLAGS@

noinst_LIBRARIES = \
	libnetwork.a

libnetwork_a_SOURCES = \
	BasicMessage.cxx \
	BasicValue.cxx \
	BufferReader.cxx \
	BufferWriter.cxx \
	CircularBuffer.cxx \
	MessageStream.cxx \
	Socket.cxx \
	Stream.cxx

EXTRA_DIST = \
	BasicBuffer.h \
	BasicMessage.h \
	BasicReader.h \
	BasicValue.h \
	BasicWriter.h \
	BufferReader.h \
	BufferWriter.h \
	CircularBuffer.h \
	MessageFactory.h \
	MessageStream.h \
	NotifyValue.h \
	Server.h \
	Socket.h \
	SocketFactory.h \
	Stream.h \
	Value.h
