INCLUDES = \
	-I.. \
	@GLIBMM_CFLAGS@

noinst_LIBRARIES = \
	libnetwork.a

libnetwork_a_SOURCES = \
	BasicMessage.cxx \
	BasicValue.cxx \
	BufferReader.cxx \
	BufferWriter.cxx \
	CircularBuffer.cxx \
	MessageStream.cxx \
	Socket.cxx \
	Stream.cxx \
	StringValue.cxx
	
libnetwork_a_CXXFLAGS = \
	-Wall \
	-O0 \
	-g

EXTRA_DIST = \
	BasicBuffer.h \
	BasicMessage.h \
	BasicReader.h \
	BasicValue.h \
	BasicWriter.h \
	BufferReader.h \
	BufferWriter.h \
	CircularBuffer.h \
	MessageFactory.h \
	MessageStream.h \
	NotifyValue.h \
	Server.h \
	Socket.h \
	Stream.h \
	StringValue.h \
	Value.h \
	VectorValue.h
